[package]
name = "wgu-transfer-test"
version = "0.1.0"
authors = ["Armin Kazmi <armin.kazmi@smartoptics.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
wgpu = "0.9.0"

[dev-dependencies]
criterion = {version = "0.3.4", features = ["async", "async_tokio"]}
criterion-macro = "0.3.4"
futures = "0.3.15"
scopeguard = "1.1.0"
wgpu-subscriber = "0.1.0"